Kubernetes/applications/redis/redis-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
      annotations:
        prometheus.io/port: '9121'
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/path: '/metrics'         
    spec:
      containers:
      - name: redis-master
        image: registry.gcsc.lmy.corp/redis/redis:v1
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.5"
            memory: 512Mi
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/bash
              - -c  
              - /usr/local/bin/redis-cli shutdown
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
        - mountPath: /redis-master/
          name: redis-config
      - name: redis-commander
        image: registry.gcsc.lmy.corp/redis/redis-commander
        imagePullPolicy: IfNotPresent
        ports:
        - name: redis-commander
          containerPort: 8081          
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-redis
        - name: redis-config
          configMap:
            name: redis-configmap
