Kubernetes/applications/redis/redis-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: redis
  name: redis-master
spec:
  type: NodePort
  ports:
    - port: 6379
      name: redis-master
      targetPort: 6379
      nodePort: 30379
  selector:
    name: redis

---
apiVersion: v1
kind: Service
metadata:
  namespace: redis
  name: redis-commander
spec:
  type: NodePort
  ports:
    - port: 8081
      name: redis-commander
      targetPort: 8081
      #nodePort: 30381
  selector:
    name: redis
