Kubernetes/applications/redis/redis-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-ingress 
  namespace: redis
spec:
  rules:
  - host: redis.gcsc.lmy.corp
    http:
      paths:
      - path: /
        backend:
          serviceName: redis-commander
          servicePort: 8081
